Fixed huge gap on mobile

--- a/src/styles/components/storeProducts.scss
+++ b/src/styles/components/storeProducts.scss
@@ -5,7 +5,6 @@
   text-align: left;
   .product-preview-container {
     display: grid;
-    grid-template-columns: 1fr 1fr;
     margin: 20px 0;
     align-items: baseline;
     column-gap: 50px;
